--- a/views/partials/slider.ejs
+++ b/views/partials/slider.ejs
@@ -5,44 +5,69 @@
     <li class="card">
       <h2>Search Solution Group</h2>
       <span
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-        deleniti, mollitia iure vitae at eaque distinctio culpa expedita totam,
-        blanditiis, exercitationem perferendis illo veritatis nesciunt pariatur
-        odit tenetur alias aperiam?</span
+        ><ul>
+          <li>Developed multiple websites after redesign</li>
+          <li>
+            Improved google ranking on the company’s websites by increasing
+            website performance.
+          </li>
+        </ul></span
       >
     </li>
 
     <li class="card">
       <h2>BlueTone Media</h2>
-      <span
-      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-      deleniti, mollitia iure vitae at eaque distinctio culpa expedita totam,
-      blanditiis, exercitationem perferendis illo veritatis nesciunt pariatur
-      odit tenetur alias aperiam?</span>
+      <span>
+        <ul>
+          <li>
+            Maintained 20+ websites by fixing bugs, adding new features, and
+            making content updates.
+          </li>
+          <li>
+            Developed a real estate application that allowed users to find
+            luxury homes in their area.
+          </li>
+          <li>
+            Increased productivity by adding indicators to a CRM application.
+          </li>
+        </ul>
+      </span>
     </li>
     <li class="card">
       <h2>Billy Graham Evangelistic Association</h2>
-      <span
-      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-      deleniti, mollitia iure vitae at eaque distinctio culpa expedita totam,
-      blanditiis, exercitationem perferendis illo veritatis nesciunt pariatur
-      odit tenetur alias aperiam?</span>
+      <span>
+        <ul>
+          <li>
+            Improved maintainability by designing and developing a form library
+            that was used in 10+ sites
+          </li>
+          <li>
+            Maintained 50+ websites by fixing bugs and adding new features.
+          </li>
+        </ul>
+      </span>
     </li>
     <li class="card">
       <h2>Code Fellows</h2>
-      <span
-      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-      deleniti, mollitia iure vitae at eaque distinctio culpa expedita totam,
-      blanditiis, exercitationem perferendis illo veritatis nesciunt pariatur
-      odit tenetur alias aperiam?</span>
+      <span>
+        <ul>
+          <li>
+            Taught students how to create websites using HTML, CSS, and
+            JavaScript.
+          </li>
+        </ul>
+      </span>
     </li>
     <li class="card">
       <h2>Magenta Technologies</h2>
-      <span
-      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-      deleniti, mollitia iure vitae at eaque distinctio culpa expedita totam,
-      blanditiis, exercitationem perferendis illo veritatis nesciunt pariatur
-      odit tenetur alias aperiam?</span>
+      <span>
+        <ul>
+          <li>
+            Increased leads by relaunching multiple websites after redesign.
+          </li>
+          <li>Maintained and developed multiple websites.</li>
+        </ul>
+      </span>
     </li>
   </ul>
   <i id="right" class="fa-solid fa-angle-right"></i>
