added scroll effects

--- a/views/partials/slider.ejs
+++ b/views/partials/slider.ejs
@@ -1,5 +1,6 @@
-<div class="wrapper">
+<div class="wrapper container" id = "slider">
   <h2>Experience</h2>
+  <div id = "carouselWrapper">
   <i id="left" class="fa-solid fa-angle-left"></i>
   <ul class="carousel">
     <li class="card">
@@ -71,4 +72,7 @@
     </li>
   </ul>
   <i id="right" class="fa-solid fa-angle-right"></i>
+</div>
+<a class = "scrollLink" href = "#contact"><span class = "scroll"></span>Contact</a>
+
 </div>
