--- a/views/partials/summary.ejs
+++ b/views/partials/summary.ejs
@@ -1,5 +1,7 @@
-<section id = "summary">
+<section class = "container" id = "summary">
     <h1 id="nameTyped"></h1>
-    <div id="summaryTyped"></div>
+    
+    <p>A Front-End Developer with four years of experience working with JavaScript, HTML, CSS, and React to deliver exceptional customer experiences. Adept at creating high quality solutions in a timely manner.</p>
+<a class = "scrollLink" href = "#skills"><span class = "scroll"></span>Skills</a>    
 </section>
 
