--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,197 +1,285 @@
 /* Global */
 html {
   min-height: 100%;
+  scroll-behavior: smooth;
 
 }
 body {
-
-
-  font-size:16px;
-  max-width: 1280px;
-  margin: 0 auto;
+  font-size: 16px;
+ overflow-y: hidden;
+ 
   color: rgb(49, 180, 49);
   font-family: "Anonymous Pro", monospace;
   background-color: rgb(25, 25, 25);
+  scroll-behavior: smooth;
 }
+
+main{
+
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height:100vh;
+  
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
+  max-width: 1280px;
+  margin: 0 auto;
+  scroll-snap-align: start;
+  height:100vh;
+  position: relative;
+}
+
 a {
-    text-decoration: none;
-    color: rgb(49, 180, 49);
+  text-decoration: none;
+  color: rgb(49, 180, 49);
 }
 
-h1{
-    font-size: 5rem;
+h1 {
+  font-size: 5rem;
 }
 
-#summary{
-    height:100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    font-size: 1.5rem;
-    font-weight: 400;
-    margin-bottom: 2rem;
+
+
+#summary {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-bottom: 2rem;
 }
 
-#skills{
-    height:100vh;
- 
 
+#skills h2,
+.wrapper h2,
+#contact h2 {
+  font-size: 3rem;
+  margin-bottom: 5rem;
+  text-align: center;
 }
-#skills h2, .wrapper h2, #contact h2{
-    font-size: 3rem;
-    margin-bottom: 5rem;
-    text-align: center;
-}
-#skillsList{
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 5rem;
-    text-align: center;
+#skillsList {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 5rem;
+  text-align: center;
 }
 
-.skill i{
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    margin:auto
+.skill i {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  margin: auto;
 }
 
 .wrapper {
-    height: 100vh;
 
-    position: relative;
+  position: relative;
+}
+
+#carouselWrapper{
+  position: relative;
+}
+.wrapper i {
+  top: 50%;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  font-size: 1.25rem;
+  position: absolute;
+  text-align: center;
+  line-height: 50px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+}
+.wrapper i:active {
+  transform: translateY(-50%) scale(0.85);
+}
+.wrapper #left {
+  left: -22px;
+}
+.wrapper i:last-child {
+  right: -22px;
+}
+.wrapper .carousel {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 3) - 12px);
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 3rem;
+  border-radius: 8px;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+.carousel.no-transition {
+  scroll-behavior: auto;
+}
+.carousel.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
+}
+.carousel.dragging .card {
+  cursor: grab;
+  user-select: none;
+}
+.carousel {
+  display: flex;
+  display: relative;
+  align-items: center;
+}
+.carousel .card {
+  scroll-snap-align: start;
+  padding: 1rem 2rem;
+  height: 500px;
+  list-style: none;
+  background: #fff;
+  cursor: pointer;
+  padding-bottom: 15px;
+  flex-direction: column;
+  border-radius: 8px;
+}
+
+.carousel .card h2 {
+  font-weight: 500;
+  font-size: 1.56rem;
+  margin: 30px 0 50px;
+
+}
+.carousel .card span {
+  color: #6a6d78;
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 1280px) {
+  body {
+    max-width: 900px;
+  }
+}
+@media screen and (max-width: 900px) {
+  h1 {
+    font-size: 4rem;
+  }
+
+  .scrollLink{
+    display: none!important;
+  }
+  .wrapper .carousel {
+    grid-auto-columns: calc((100% / 2) - 9px);
+    gap: 1rem;
+  }
+
+  .carousel .card {
+    min-height: 400px;
+    height: auto;
+  }
+
+  #skills,
+  .wrapper,
+  #contact,
+  #summary {
+    padding: 0rem 2rem;
+  }
+
+  #skills h2,
+  .wrapper h2,
+  #contact h2 {
+    margin-bottom: 3rem;
+    text-align: center;
   }
   .wrapper i {
-    top: 50%;
-    height: 50px;
-    width: 50px;
-    cursor: pointer;
-    font-size: 1.25rem;
-    position: absolute;
-    text-align: center;
-    line-height: 50px;
-    background: #fff;
-    border-radius: 50%;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
-    transform: translateY(-50%);
-    transition: transform 0.1s linear;
-  }
-  .wrapper i:active{
-    transform: translateY(-50%) scale(0.85);
-  }
-  .wrapper #left{
-    left: -22px;
-  }
-  .wrapper i:last-child{
-    right: -22px;
-  }
-  .wrapper .carousel{
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: calc((100% / 3) - 12px);
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    gap: 3rem;
-    border-radius: 8px;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-  }
-  .carousel::-webkit-scrollbar {
     display: none;
   }
-  .carousel.no-transition {
-    scroll-behavior: auto;
+}
+@media screen and (max-width: 600px) {
+  .wrapper .carousel {
+    grid-auto-columns: 100%;
   }
-  .carousel.dragging {
-    scroll-snap-type: none;
-    scroll-behavior: auto;
-  }
-  .carousel.dragging .card {
-    cursor: grab;
-    user-select: none;
-  }
-  .carousel  {
-    display: flex;
-    
-    align-items: center;
-  }
-  .carousel .card {
-    scroll-snap-align: start;
-    padding: 1rem 2rem;
-    height: 500px;
-    list-style: none;
-    background: #fff;
-    cursor: pointer;
-    padding-bottom: 15px;
-    flex-direction: column;
-    border-radius: 8px;
-  }
-
-  .carousel .card h2 {
-    font-weight: 500;
-    font-size: 1.56rem;
-    margin: 30px 0 5px;
-  }
-  .carousel .card span {
-    color: #6A6D78;
-    font-size: 1rem;
-  }
-  @media screen and (max-width: 900px) {
-    h1{
-        font-size: 4rem;
-    }
-    .wrapper .carousel {
-      grid-auto-columns: calc((100% / 2) - 9px);
-      gap:1rem;
-    }
-
-     .carousel .card {
-        min-height:370px;
-        height: auto;
-     }
-
-     #skills, .wrapper, #contact, #summary{
-        height:auto;
-        min-height:350px;
-        padding: 0rem 2rem;
-     }
-
-     #skills h2, .wrapper h2, #contact h2{
-        
-        margin-bottom: 3rem;
-        text-align: center;
-    }
- .wrapper i{
-    display: none;
- }
+}
 
 
-  }
-  @media screen and (max-width: 600px) {
-    .wrapper .carousel {
-      grid-auto-columns: 100%;
-    }
-  }
+#contact i {
+  font-size: 3rem;
+  padding: 2rem 0rem;
+  margin: auto;
+}
 
-  #contact{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+#contactList div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.scroll {
+  position: absolute;
+  top: -75px;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  transform: translate(-50%, -50%);
+  border-left: 1px solid rgb(49, 180, 49);
+  border-bottom: 1px solid rgb(49, 180, 49);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb05 1.5s infinite;
+  animation: sdb05 1.5s infinite;
+  box-sizing: border-box;
+}
+@-webkit-keyframes sdb05 {
+  0% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
   }
-
-
-  #contact i{
-    font-size: 3rem;
-    padding: 2rem 0rem;
-    margin:auto
+  50% {
+    opacity: 1;
   }
-
-  #contactList div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   
+  100% {
+    -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
   }
+}
+@keyframes sdb05 {
+  0% {
+    transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
+}
 
+
+
+.scrollLink  {
+  position: absolute;
+  cursor: pointer;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  transform: translate(-50%, -50%);
+
+  font-size:24px;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.scrollLink:hover {
+  opacity: .5;
+}
