--- a/views/partials/skills.ejs
+++ b/views/partials/skills.ejs
@@ -1,4 +1,4 @@
-<section id="skills">
+<section class = "container" id="skills">
     <h2>Skills</h2>
   <div id="skillsList">
     <div class="skill">
@@ -39,4 +39,5 @@
       <p>Git</p>
     </div>
   </div>
+  <a class = "scrollLink" href = "#slider"><span class = "scroll"></span>Experience</a>
 </section>
