tel link to mailto

--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -2,7 +2,7 @@
   <h2>Contact</h2>
 
   <div id="contactList">
-    <a href = "tel:tdolphus21@gmail.com">
+    <a href = "mailto:tdolphus21@gmail.com">
       <div >
         <i class="fas fa-envelope"></i>
         <span>Email: Tdolphus21@gmail.com</span>
